--- a/style.css
+++ b/style.css
@@ -44,3 +44,20 @@ p {
   color: white;
   font-size: 25px;
 }
+@media screen and (min-width: 320px) {
+   .title {
+       font-size: 1.6em;    // I want my title this size on a phone
+   }
+  #menuArea {
+      width: 100%;  
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .title {
+       font-size: 2em;    // I want my title this size on a bigger tablet
+   }
+  #menuArea {
+      width: 80%;
+  }
+}
